Added session management.

--- a/application/templates/projects.html
+++ b/application/templates/projects.html
@@ -160,7 +160,7 @@
             </div>-->
             <!-- Megamenu end     -->
             <!-- Log out               -->
-            <div class="list-inline-item logout">                   <a id="logout" href="/login" class="nav-link">Logout <i class="icon-logout"></i></a></div>
+            <div class="list-inline-item logout">                   <a id="logout" href="/logout" class="nav-link">Logout <i class="icon-logout"></i></a></div>
           </div>
         </div>
       </nav>
@@ -172,8 +172,8 @@
         <div class="sidebar-header d-flex align-items-center">
           <!--<div class="avatar"><img src="img/avatar-2.jpg" alt="..." class="img-fluid rounded-circle"></div> -->
           <div class="title">
-            <h1 class="h5">{{name}}</h1>
-            <p>{{occ}}</p>
+            <h1 class="h5">{{ name }}</h1>
+            <p>{{ occ }}</p>
           </div>
         </div>
         <!-- Sidebar Navidation Menus--><span class="heading">Main</span>
